test/integration/bad/new/mystery15.stan
transformed data { 1 ^ 1 while